sections bottom gap fixed

--- a/client/src/app/components/Main/components/ContactMe/ContactMe.scss
+++ b/client/src/app/components/Main/components/ContactMe/ContactMe.scss
@@ -5,6 +5,6 @@
 
   @include media-query($media-md) {
     background-image: url("/background/fourth-background-675x900.svg");
-    margin-top: -3px;
+    // margin-top: -3px;
   }
 }
